--- a/Ukrainian/main/LewaIntercept.apk/res/values-uk/arrays.xml
+++ b/Ukrainian/main/LewaIntercept.apk/res/values-uk/arrays.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="modes_array">
-        <item>Перехват вызовов и сообщений</item>
-        <item>Перехват вызовов</item>
-        <item>Перехват сообщений</item>
+        <item>"Перехоплення викликів і повідомлень"</item>
+        <item>"Перехоплення викликів"</item>
+        <item>"Перехоплення повідомлень"</item>
     </string-array>
     <string-array name="number_list">
-        <item>Черный список</item>
-        <item>Белый список</item>
+        <item>"Чорний список"</item>
+        <item>"Білий список"</item>
     </string-array>
     <string-array name="block_information_list">
-        <item>Сообщения</item>
-        <item>Звонки</item>
+        <item>"Повідомлення"</item>
+        <item>"Дзвінки"</item>
     </string-array>
 </resources>
