--- a/Ukrainian/main/LewaLauncherX.apk/res/values-uk/arrays.xml
+++ b/Ukrainian/main/LewaLauncherX.apk/res/values-uk/arrays.xml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="desktop_transition_effect_entries">
-        <item>Стандарт</item>
-        <item>Стандарт (без отскока)</item>
-        <item>Планшет</item>
-        <item>Приближение</item>
-        <item>Удаление</item>
-        <item>Вращение вверх</item>
-        <item>Вращение вниз</item>
-        <item>Куб внутри</item>
-        <item>Куб снаружи</item>
-        <item>Стек</item>
+        <item>"Стандарт"</item>
+        <item>"Стандарт (без відскоку)"</item>
+        <item>"Планшет"</item>
+        <item>"Наближення"</item>
+        <item>"Видалення"</item>
+        <item>"Обертання вгору"</item>
+        <item>"Обертання вниз"</item>
+        <item>"Куб всередині"</item>
+        <item>"Куб зовні"</item>
+        <item>"Стек"</item>
     </string-array>
 </resources>
